<resources>
    <string name="version">v2022-10-23-morning</string>
    <string name="app_name">智能物流</string>
    <string name="login_title">登录</string>
    <string name="scan_footnote">© 中铝智安院 </string>

    <string name="scanner_main_label_text">操作主界面</string>
    <string name="start_receipt_text">采购收货</string>
    <string name="start_sales_reject_text">采购退货</string>
    <string name="start_sample">开始采样</string>
    <string name="start_sampling">开始抽样</string>
    <string name="sampling_register_text">采样登记</string>
    <string name="sampling2_register_text">抽样登记</string>
    <string name="search_history_text">操作记录</string>
    <string name="search_accept_history_text">查收货卡</string>
    <string name="clear_history_text">记录清除</string>
    <string name="test_write_trigger">测试写入</string>
    <string name="test_read_trigger">测试读取</string>
    <string name="change_password_text">密码修改</string>
    <string name="password_validation_hint">"密码至少包含8个字符，且应该包含至少一个字符和一个数字"</string>

    <string name="scan_title">二维码扫描</string>
    <string name="scan_hint">长按按钮，开始扫描二维码</string>
    <string name="scan_trigger_text">开始扫描</string>
    <string name="scan_trigger_end">扫描中</string>

    <string name="accept_sales_hint_text"> 请让司机扫描二维码确认收货 </string>
    <string name="show_qr_code">二维码出示</string>
    <string name="reject_sales_hint_text"> 请让司机扫描二维码确认退货!! </string>
    <string name="start_send_out_hint_text"> 请让司机扫描二维码确认发货!! </string>
    <string name="str_write_text">写卡</string>
    <string name="erase_tag_text">格式化卡片</string>
    <string name="new_sample_card">补正样卡</string>
    <string name="new_sampling_card">补抽样卡</string>
    <string name="str_read_text">读卡</string>
    <string name="str_read_hint_text">  </string>


    <string name="receipt_directly_text">直接收货</string>
    <string name="secondary_confirmation_text">二次确认</string>
    <string name="receipt_text">收货</string>
    <string name="rewrite_accept_card">补收货卡</string>
    <string name="rewrite_card">补卡</string>
    <string name="search_receipt_card_text">查收货卡</string>
    <string name="search_sample_card_text">查正样卡</string>
    <string name="search_sampling2_card_text">查抽样卡</string>
    <string name="search_sampled_card_text">查被抽样</string>
    <string name="reload_unloading_place_text">重输卸货地点</string>
    <string name="show_accept">收货卡信息</string>
    <string name="show_card">卡信息</string>
    <string name="accept_input_card">收货信息</string>
    <string name="unload_place_label">卸货点</string>
    <string name="impurity_label">扣杂（%）</string>

    <string name="reload_unloading_place_hint_text">重新扫描司机二维码进行收货，即可更改卸货地点</string>


    <string name="scan_result">扫描结果</string>
    <string name="scan_on">开</string>
    <string name="scan_off">关</string>
    <string name="scan_settings">设置</string>
    <string name="scan_service">扫描服务</string><!--ScanService-->


    <string name="start_receipt_title">开始收货</string>


    <string name="scan_lock_trigger">锁定开关</string>
    <string name="scan_lock_trigger_summary">禁用扫描触发器</string>
    <string name="scan_trigger_mode">触发模式</string>
    <string name="scan_output_mode">扫描输出模式</string>
    <string name="scan_sound_mode">蜂鸣</string>
    <string name="scan_reset_def_summary">将设置恢复为默认</string>
    <string name="scan_reset_def">重置设置</string>
    <string name="scan_reset_def_alert">确认将设置恢复为默认？</string>
    <string name="scan_reset_title">重置</string>
    <string name="scan_reset_progress">重置......</string>
    <string name="scanner_toast">重置完成！</string>
    <string name="water_label">扣水（%）</string>
    <string name="confirm_label">确定</string>
    <string name="cancel_label">取消</string>
    <string name="nfc_setting_label">设置NFC</string>
    <string name="rewrite_accept_card_label">补收货卡</string>
</resources>
