<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ScannerMain">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:id="@+id/home_show"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_receipt_text"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_reject_sales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_sales_reject_text"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sampling_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_sample"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sampling2_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_sampling"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/search_history_text"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/clear_history_text"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/change_password_text"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/erase_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/erase_tag_text"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/test_write_trigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/test_write_trigger"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:visibility="visible"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/test_read_trigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/test_read_trigger"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/scan_footnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="80dp"
            android:gravity="center"
            android:textSize="15dp"
            android:hint="@string/version"
            android:visibility="visible">
        </TextView>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>