<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartReceiptActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:textSize="50dp"
                android:gravity="center"
                android:text="@string/receipt_text"
                android:textColor="@color/white"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_receipt_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:textSize="50dp"
                android:gravity="center"
                android:text="@string/search_receipt_card_text"
                android:textColor="@color/white"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/receipt_directly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:textSize="50dp"
                android:gravity="center"
                android:text="@string/receipt_directly_text"
                android:textColor="@color/white"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/secondary_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:textSize="50dp"
                android:gravity="center"
                android:text="@string/secondary_confirmation_text"
                android:textColor="@color/white"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/reload_unloading_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="40dp"
                android:gravity="center"
                android:text="@string/reload_unloading_place_text"
                android:textColor="@color/white"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>